--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "![GitHub Game Off 2016 Theme is Hacking, Modding, or Augmenting](https://cloud.githubusercontent.com/assets/121322/19498019/d8827370-9543-11e6-82d8-6da822b6147b.png)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node node_modules/requirejs/bin/r.js -o ./build.js"
   },
   "repository": {
     "type": "git",
